Fri May 01 13:33:28 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc,net/progclient.cc: IRIX is dead, so remove
	  lingering traces of support for SGI's compiler.

Fri May 01 08:59:13 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING,INSTALL: STLport was last released in 2008, so (a) it's no
	  longer actively developed and (b) it won't support C++11, so strip
	  out documentation which mentions it.
	* configure.ac: For Sun's C++ compiler, -std=c++11 enables C++11
	  support, and is incompatible with -library=stlport, so remove code
	  to enable that later option.

Fri May 01 01:37:24 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Tweak comment to match xapian-omega's configure.

Fri May 01 01:36:41 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Set default value for AUTOM4TE before AC_OUTPUT so the
	  default will actually get used.

Fri May 01 01:36:05 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Add explicit AC_CANONICAL_HOST.

Fri May 01 01:08:56 GMT 2015  Olly Betts <olly@survex.com>

	* api/matchspy.cc,tests/api_nodb.cc: Eliminate needless uses of
	  AutoPtr.

Fri May 01 00:37:42 GMT 2015  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Remove self-assignment check of AutoPtr as
	  that doesn't work under C++11 when AutoPtr is unique_ptr, and add
	  other checks of reassignment which should work for both.

Fri May 01 00:37:09 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_postingsource.cc: Remove C++11 specific test which doesn't
	  actually work with C++11.

Fri May 01 00:33:43 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc,
	  tests/harness/backendmanager_remotetcp.cc,
	  tests/harness/testsuite.h,tests/harness/testutils.h: Add spaces
	  between literal strings and macros which expand to literal strings
	  for C++11 compatibility.

Thu Apr 30 14:41:59 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc,backends/glass/glass_table.cc: Remove